# voxelizer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
.github/workflows/: build.yml
res/shaders/: fragmentShader.fs  vertexShader.vs
src/: chunk.hpp  chunkMesher.hpp  main.cpp  perlinNoise.cpp  perlinNoise.hpp  shader.hpp  utils.hpp  world.hpp  worldGenerator.cpp  worldGenerator.hpp
tests/: test_chunk.cpp  test_chunkMesher.cpp  test_perlinNoise.cpp
